--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <nav>Naver naver naver naver</nav>
     <h1>Hello world</h1>
+    <footer>Let's add some footy lads</footer>
 </body>
 </html>
